--- a/examples/index.html
+++ b/examples/index.html
@@ -11,13 +11,14 @@
 	<!-- Importing Web Component's Polyfill -->
 	<script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
 
-	<!-- Importing Custom Elements -->
+	<!-- Importing Custom Element -->
 	<link rel="import" href="../index.html">
+
 </head>
 <body>
 
 	<!-- Custom Element -->
-	<ui-slider></ui-slider>
+	<ui-slider min="10" max="100" step="5"></ui-slider>
 
 </body>
 </html>
